--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
     ],
     "minimum-stability": "beta",
     "require": {
-        "smarty/smarty": "^4.3"
+        "php": ">=8.1.0",
+        "monolog/monolog": "3.3.1",
+        "latte/latte": "^v3.0.6"
     }
 }
